--- a/scss/helpers/_scroll.scss
+++ b/scss/helpers/_scroll.scss
@@ -1,6 +1,6 @@
 @mixin mac-scrollbar-style() {
     &::-webkit-scrollbar {
-        background-color: transparent;
+        background-color: var(--light-brown);
         width: 8px;
     }
 
